--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -238,4 +238,8 @@
     <string name="automatically_taken_summary">Wenn aktiv, wird die Erinnerung nicht als Benachrichtigung angezeigt und automatisch als eingenommen markiert (kann verwendet werden, um nur den Vorrat zu verfolgen).</string>
     <string name="reminder_status_summary">Erinnerungen können aktiv und inaktiv sein. Wenn sie inaktiv sind, wird keine Benachrichtigung ausgelöst. Dies kann entweder statisch oder datumsbasiert konfiguriert werden und kann zum Ausschleichen eines Medikaments verwendet werden.</string>
     <string name="further_settings">Weitere Einstellungen</string>
+    <string name="alarm_settings">Alarmeinstellungen</string>
+    <string name="no_alarm_sound_when_silent">Kein Alarmton im Lautlos-Modus</string>
+    <string name="no_vibration_when_silent">Keine Vibration im Lautlos-Modus</string>
+    <string name="alarm_ringtone">Alarm-Klingelton</string>
 </resources>
