--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -243,4 +243,8 @@
     <string name="automatically_taken_summary">Cuando está activo, el recordatorio no se muestra como notificación y se marca automáticamente como tomado (se puede usar para rastrear solo el stock).</string>
     <string name="reminder_status_summary">Los recordatorios pueden estar activos e inactivos. Si están inactivos, no se genera ninguna notificación. Esto se puede configurar de forma estática o en función de las fechas. Utilice esta opción para configurar la reducción gradual de un medicamento.</string>
     <string name="further_settings">Más ajustes</string>
+    <string name="alarm_settings">Ajustes de la alarma</string>
+    <string name="no_alarm_sound_when_silent">No sonar la alarma en modo silencio</string>
+    <string name="no_vibration_when_silent">No vibrar en modo silencio</string>
+    <string name="alarm_ringtone">Tono de la alarma</string>
 </resources>
