--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -238,4 +238,8 @@
     <string name="automatically_taken_summary">Indien actief, wordt de herinnering niet als melding getoond en automatisch als ingenomen gemarkeerd (kan worden gebruikt om alleen de voorraad bij te houden).</string>
     <string name="reminder_status_summary">Herinneringen kunnen actief en inactief zijn. Als ze inactief zijn, wordt er geen melding verzonden. Dit kan statisch of op basis van datums worden geconfigureerd. Gebruik dit om het afbouwen van een medicijn te configureren.</string>
     <string name="further_settings">Verdere instellingen</string>
+    <string name="alarm_settings">Alarminstellingen</string>
+    <string name="no_alarm_sound_when_silent">Geen alarmgeluid in stille modus</string>
+    <string name="no_vibration_when_silent">Geen trillingen in stille modus</string>
+    <string name="alarm_ringtone">Alarmbeltoon</string>
 </resources>
