--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="period_end">Koniec okresu</string>
     <string name="tab_overview">Przegląd</string>
@@ -252,4 +252,6 @@
     <string name="no_alarm_sound_when_silent">Brak dźwięku alarmu w trybie cichym</string>
     <string name="no_vibration_when_silent">Brak wibracji w trybie cichym</string>
     <string name="alarm_ringtone">Dzwonek alarmu</string>
+    <string name="system_locale">Użyj ustawień systemowych dla formatu daty/godziny</string>
+    <string name="system_locale_summary">Jeśli jest wyłączona, aplikacja korzysta z ustawienia odpowiadającego językowi ustawionemu dla aplikacji.</string>
 </resources>
