--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Indstillinger</string>
     <string name="tab_overview">Oversigt</string>
@@ -242,4 +242,6 @@
     <string name="no_alarm_sound_when_silent">Ingen alarmlyd i lydløs tilstand</string>
     <string name="no_vibration_when_silent">Ingen vibration i lydløs tilstand</string>
     <string name="alarm_ringtone">Alarm ringetone</string>
+    <string name="system_locale">Brug systemindstilling til dato/tidsformat</string>
+    <string name="system_locale_summary">Hvis den er slået fra, bruger appen den indstilling, der svarer til det sprog, der er indstillet for appen.</string>
 </resources>
