--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -242,4 +242,6 @@
     <string name="no_alarm_sound_when_silent">Kein Alarmton im Lautlos-Modus</string>
     <string name="no_vibration_when_silent">Keine Vibration im Lautlos-Modus</string>
     <string name="alarm_ringtone">Alarm-Klingelton</string>
+    <string name="system_locale">Systemeinstellung für Datums-/Zeitformat verwenden</string>
+    <string name="system_locale_summary">Wenn ausgeschaltet verwendet die App die Einstellung, die der für die App eingestellten Sprache entspricht.</string>
 </resources>
