--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Ajustes</string>
     <string name="tab_overview">Resumen</string>
@@ -247,4 +247,6 @@
     <string name="no_alarm_sound_when_silent">No sonar la alarma en modo silencio</string>
     <string name="no_vibration_when_silent">No vibrar en modo silencio</string>
     <string name="alarm_ringtone">Tono de la alarma</string>
+    <string name="system_locale">Utilizar la configuración del sistema para el formato de fecha/hora</string>
+    <string name="system_locale_summary">Si está desactivada, la aplicación utiliza la configuración que coincide con el idioma establecido para la aplicación.</string>
 </resources>
