--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Asetukset</string>
     <string name="tab_overview">Yleiskatsaus</string>
@@ -242,4 +242,6 @@
     <string name="no_alarm_sound_when_silent">Ei hälytysääntä äänettömässä tilassa</string>
     <string name="no_vibration_when_silent">Ei värinää äänettömässä tilassa</string>
     <string name="alarm_ringtone">Hälytyksen soittoääni</string>
+    <string name="system_locale">Käytä järjestelmäasetusta päivämäärän/ajan muotoa varten</string>
+    <string name="system_locale_summary">Jos se on pois päältä, sovellus käyttää sovellukselle asetettua kieltä vastaavaa asetusta.</string>
 </resources>
