--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources xmlns:ns0="http://schemas.android.com/tools">
     <string name="tab_settings">Paramètres</string>
     <string name="tab_overview">Aperçu</string>
@@ -247,4 +247,6 @@
     <string name="no_alarm_sound_when_silent">Pas de son d\'alarme en mode silencieux</string>
     <string name="no_vibration_when_silent">Pas de vibration en mode silencieux</string>
     <string name="alarm_ringtone">Sonnerie de l\'alarme</string>
+    <string name="system_locale">Utiliser les paramètres du système pour le format de la date et de l&amp;apos;heure</string>
+    <string name="system_locale_summary">Si elle est désactivée, l&amp;apos;application utilise le paramètre correspondant à la langue définie pour l&amp;apos;application.</string>
 </resources>
