--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Beállítások</string>
     <string name="tab_overview">Áttekintés</string>
@@ -242,4 +242,6 @@
     <string name="no_alarm_sound_when_silent">Nincs ébresztőhang némításkor</string>
     <string name="no_vibration_when_silent">Nincs rezgés némításkor</string>
     <string name="alarm_ringtone">Ébresztő csengőhangja</string>
+    <string name="system_locale">Rendszerbeállítás használata a dátum/idő formátumhoz</string>
+    <string name="system_locale_summary">Ha ki van kapcsolva, az alkalmazás az alkalmazáshoz beállított nyelvnek megfelelő beállítást használja.</string>
 </resources>
