--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources xmlns:ns0="http://schemas.android.com/tools">
     <string name="tab_settings">Настройки</string>
     <string name="tab_overview">Обзор</string>
@@ -249,4 +249,6 @@
     <string name="no_alarm_sound_when_silent">Нет звука будильника в беззвучном режиме</string>
     <string name="no_vibration_when_silent">Нет вибрации в беззвучном режиме</string>
     <string name="alarm_ringtone">Мелодия будильника</string>
+    <string name="system_locale">Используйте системные настройки для формата даты/времени</string>
+    <string name="system_locale_summary">Если он выключен, приложение использует настройки, соответствующие языку, установленному для данного приложения.</string>
 </resources>
