--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources xmlns:ns0="http://schemas.android.com/tools">
     <string name="enable_alarm_dialog">Щоб дозволити планування точних будильників, увімкніть цю опцію для MedTimer у наступному меню</string>
     <string name="tab_overview">Огляд</string>
@@ -252,4 +252,6 @@
     <string name="no_alarm_sound_when_silent">Немає звуку будильника в беззвучному режимі</string>
     <string name="no_vibration_when_silent">Немає вібрації в беззвучному режимі</string>
     <string name="alarm_ringtone">Мелодія будильника</string>
+    <string name="system_locale">Використовуйте системні налаштування для формату дати/часу</string>
+    <string name="system_locale_summary">Якщо її вимкнено, програма використовує налаштування, що відповідають мові, встановленій для програми.</string>
 </resources>
