--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -244,4 +244,6 @@
     <string name="no_alarm_sound_when_silent">No alarm sound when silent</string>
     <string name="no_vibration_when_silent">No vibration when silent</string>
     <string name="alarm_ringtone">Alarm ringtone</string>
+    <string name="system_locale">Use system setting for date/time format</string>
+    <string name="system_locale_summary">If switched off, the app uses the setting matching the language set for the app.</string>
 </resources>
