--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -242,6 +242,6 @@
     <string name="no_alarm_sound_when_silent">Χωρίς ήχο ειδοποίησης σε αθόρυβη λειτουργία</string>
     <string name="no_vibration_when_silent">Χωρίς δόνηση σε αθόρυβη λειτουργία</string>
     <string name="alarm_ringtone">Ήχος κλήσης ειδοποίησης</string>
-    <string name="system_locale">Χρήση της ρύθμισης του συστήματος για τη μορφή ημερομηνίας/ώρας</string>
-    <string name="system_locale_summary">Εάν είναι απενεργοποιημένη, η εφαρμογή χρησιμοποιεί τη ρύθμιση που αντιστοιχεί στη γλώσσα που έχει οριστεί για την εφαρμογή.</string>
+    <string name="system_locale">Χρήση της ρύθμισης του συστήματος για τη μορφή ημερομηнίας/ώρας</string>
+    <string name="system_locale_summary">Όταν είναι απενεργοποιημένη, η εφαρμογή χρησιμοποιεί τη ρύθμιση που αντιστοιχεί στη γλώσσα που έχει οριστεί για την εφαρμογή.</string>
 </resources>
