--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -263,5 +263,5 @@
     <string name="no_vibration_when_silent">لا يوجد اهتزاز في الوضع الصامت</string>
     <string name="alarm_ringtone">نغمة المنبه</string>
     <string name="system_locale">استخدام إعداد النظام لتنسيق التاريخ/الوقت</string>
-    <string name="system_locale_summary">في حالة إيقاف تشغيله، يستخدم التطبيق الإعداد المطابق للغة التي تم تعيينها للتطبيق.</string>
+    <string name="system_locale_summary">عند إيقاف تشغيله، يستخدم التطبيق الإعداد المطابق للغة التي تم تعيينها للتطبيق.</string>
 </resources>
