--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -243,5 +243,5 @@
     <string name="no_vibration_when_silent">Без вибрация в безшумен режим</string>
     <string name="alarm_ringtone">Мелодия на алармата</string>
     <string name="system_locale">Използване на системната настройка за формат дата/час</string>
-    <string name="system_locale_summary">Ако е изключено, приложението използва настройката, съответстваща на езика, зададен за приложението.</string>
+    <string name="system_locale_summary">При изключено състояние приложението използва настройката, съответстваща на езика, зададен за приложението.</string>
 </resources>
