--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -243,5 +243,5 @@
     <string name="no_vibration_when_silent">Ingen vibration i lydløs tilstand</string>
     <string name="alarm_ringtone">Alarm ringetone</string>
     <string name="system_locale">Brug systemindstilling til dato/tidsformat</string>
-    <string name="system_locale_summary">Hvis den er slået fra, bruger appen den indstilling, der svarer til det sprog, der er indstillet for appen.</string>
+    <string name="system_locale_summary">Hvis slået fra, bruger appen den indstilling, der svarer til det sprog, der er indstillet for appen.</string>
 </resources>
