--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -243,5 +243,5 @@
     <string name="no_vibration_when_silent">Ei värinää äänettömässä tilassa</string>
     <string name="alarm_ringtone">Hälytyksen soittoääni</string>
     <string name="system_locale">Käytä järjestelmäasetusta päivämäärän/ajan muotoa varten</string>
-    <string name="system_locale_summary">Jos se on pois päältä, sovellus käyttää sovellukselle asetettua kieltä vastaavaa asetusta.</string>
+    <string name="system_locale_summary">Jos pois päältä, sovellus käyttää sovellukselle asetettua kieltä vastaavaa asetusta.</string>
 </resources>
