--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -248,5 +248,5 @@
     <string name="no_vibration_when_silent">Pas de vibration en mode silencieux</string>
     <string name="alarm_ringtone">Sonnerie de l\'alarme</string>
     <string name="system_locale">Utiliser les paramètres du système pour le format de la date et de l&amp;apos;heure</string>
-    <string name="system_locale_summary">Si elle est désactivée, l&amp;apos;application utilise le paramètre correspondant à la langue définie pour l&amp;apos;application.</string>
+    <string name="system_locale_summary">En cas de désactivation, l&apos;application utilise le paramètre correspondant à la langue définie pour l&apos;application.</string>
 </resources>
