--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -243,5 +243,5 @@
     <string name="no_vibration_when_silent">Nincs rezgés némításkor</string>
     <string name="alarm_ringtone">Ébresztő csengőhangja</string>
     <string name="system_locale">Rendszerbeállítás használata a dátum/idő formátumhoz</string>
-    <string name="system_locale_summary">Ha ki van kapcsolva, az alkalmazás az alkalmazáshoz beállított nyelvnek megfelelő beállítást használja.</string>
+    <string name="system_locale_summary">Kikapcsolt állapotban az alkalmazás az alkalmazáshoz beállított nyelvnek megfelelő beállítást használja.</string>
 </resources>
