--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -248,5 +248,5 @@
     <string name="no_vibration_when_silent">Nessuna vibrazione in modalità silenziosa</string>
     <string name="alarm_ringtone">Suoneria sveglia</string>
     <string name="system_locale">Utilizzare le impostazioni di sistema per il formato di data e ora</string>
-    <string name="system_locale_summary">Se è disattivata, l&amp;apos;applicazione utilizza l&amp;apos;impostazione corrispondente alla lingua impostata per l&amp;apos;applicazione.</string>
+    <string name="system_locale_summary">In caso di disattivazione, l&apos;applicazione utilizza l&apos;impostazione corrispondente alla lingua impostata per l&apos;applicazione.</string>
 </resources>
