--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -243,5 +243,5 @@
     <string name="no_vibration_when_silent">Geen trillingen in stille modus</string>
     <string name="alarm_ringtone">Alarmbeltoon</string>
     <string name="system_locale">Gebruik systeeminstelling voor datum/tijd formaat</string>
-    <string name="system_locale_summary">Indien uitgeschakeld, gebruikt de app de instelling die overeenkomt met de taal die is ingesteld voor de app.</string>
+    <string name="system_locale_summary">Indien uitgeschakeld, gebruikt de app de instelling die overeenkomt met de taal die voor de app is ingesteld.</string>
 </resources>
