--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -243,5 +243,5 @@
     <string name="no_vibration_when_silent">Sessiz modda titreşim yok</string>
     <string name="alarm_ringtone">Alarm zil sesi</string>
     <string name="system_locale">Tarih/saat biçimi için sistem ayarını kullan</string>
-    <string name="system_locale_summary">Kapatılırsa, uygulama, uygulama için ayarlanan dille eşleşen ayarı kullanır.</string>
+    <string name="system_locale_summary">Kapatıldığında, uygulama, uygulama için ayarlanan dille eşleşen ayarı kullanır.</string>
 </resources>
