--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -187,7 +187,7 @@
         <item quantity="many">годин</item>
     </plurals>
     <plurals name="days">
-        <item quantity="one">день</item>
+        <item quantity="one" ns0:ignore="ImpliedQuantity">день</item>
         <item quantity="other">дні</item>
         <item quantity="few">дні</item>
         <item quantity="many">днів</item>
