--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -246,4 +246,5 @@
     <string name="alarm_ringtone">Alarm ringtone</string>
     <string name="system_locale">Use system setting for date/time format</string>
     <string name="system_locale_summary">If switched off, the app uses the setting matching the language set for the app.</string>
+    <string name="audio_playback_attribution" translatable="false">This app plays audio in an alarm</string>
 </resources>
