--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -239,4 +239,6 @@
     <string name="alarm_ringtone">鬧鐘鈴聲</string>
     <string name="system_locale">使用系統設定的日期/時間格式</string>
     <string name="system_locale_summary">如果關閉，應用程式將使用與其設定語言相符的格式。</string>
+    <string name="raised">已觸發</string>
+    <string name="scheduled">已排定</string>
 </resources>
