--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -264,4 +264,6 @@
     <string name="alarm_ringtone">نغمة المنبه</string>
     <string name="system_locale">استخدام إعداد النظام لتنسيق التاريخ/الوقت</string>
     <string name="system_locale_summary">عند إيقاف تشغيله، يستخدم التطبيق الإعداد المطابق للغة التي تم تعيينها للتطبيق.</string>
+    <string name="raised">تم الرفع</string>
+    <string name="scheduled">مجدول</string>
 </resources>
