--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -244,4 +244,6 @@
     <string name="alarm_ringtone">Alarm ringetone</string>
     <string name="system_locale">Brug systemindstilling til dato/tidsformat</string>
     <string name="system_locale_summary">Hvis slået fra, bruger appen den indstilling, der svarer til det sprog, der er indstillet for appen.</string>
+    <string name="raised">Udløst</string>
+    <string name="scheduled">Planlagt</string>
 </resources>
