--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -244,4 +244,6 @@
     <string name="alarm_ringtone">Alarm-Klingelton</string>
     <string name="system_locale">Systemeinstellung für Datums-/Zeitformat verwenden</string>
     <string name="system_locale_summary">Wenn ausgeschaltet verwendet die App die Einstellung, die der für die App eingestellten Sprache entspricht.</string>
+    <string name="raised">Ausgelöst</string>
+    <string name="scheduled">Geplant</string>
 </resources>
