--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -244,4 +244,6 @@
     <string name="alarm_ringtone">Ήχος κλήσης ειδοποίησης</string>
     <string name="system_locale">Χρήση της ρύθμισης του συστήματος για τη μορφή ημερομηнίας/ώρας</string>
     <string name="system_locale_summary">Όταν είναι απενεργοποιημένη, η εφαρμογή χρησιμοποιεί τη ρύθμιση που αντιστοιχεί στη γλώσσα που έχει οριστεί για την εφαρμογή.</string>
+    <string name="raised">Ενεργοποιήθηκε</string>
+    <string name="scheduled">Προγραμματισμένη</string>
 </resources>
