--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -249,4 +249,6 @@
     <string name="alarm_ringtone">Tono de la alarma</string>
     <string name="system_locale">Utilizar la configuración del sistema para el formato de fecha/hora</string>
     <string name="system_locale_summary">Si se desactiva, la aplicación utiliza la configuración que coincide con el idioma establecido para la aplicación.</string>
+    <string name="raised">Activada</string>
+    <string name="scheduled">Programada</string>
 </resources>
