--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -244,4 +244,6 @@
     <string name="alarm_ringtone">Hälytyksen soittoääni</string>
     <string name="system_locale">Käytä järjestelmäasetusta päivämäärän/ajan muotoa varten</string>
     <string name="system_locale_summary">Jos pois päältä, sovellus käyttää sovellukselle asetettua kieltä vastaavaa asetusta.</string>
+    <string name="raised">Laukaistu</string>
+    <string name="scheduled">Ajastettu</string>
 </resources>
