--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -249,4 +249,6 @@
     <string name="alarm_ringtone">Sonnerie de l\'alarme</string>
     <string name="system_locale">Utiliser les paramètres du système pour le format de la date et de l\'heure</string>
     <string name="system_locale_summary">En cas de désactivation, l\'application utilise le paramètre correspondant à la langue définie pour l\'application.</string>
+    <string name="raised">Déclenchée</string>
+    <string name="scheduled">Planifiée</string>
 </resources>
