--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -244,4 +244,6 @@
     <string name="alarm_ringtone">Alarmbeltoon</string>
     <string name="system_locale">Gebruik systeeminstelling voor datum/tijd formaat</string>
     <string name="system_locale_summary">Indien uitgeschakeld, gebruikt de app de instelling die overeenkomt met de taal die voor de app is ingesteld.</string>
+    <string name="raised">Afgegaan</string>
+    <string name="scheduled">Gepland</string>
 </resources>
