--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -254,4 +254,6 @@
     <string name="alarm_ringtone">Dzwonek alarmu</string>
     <string name="system_locale">Użyj ustawień systemowych dla formatu daty/godziny</string>
     <string name="system_locale_summary">Jeśli wyłączone, aplikacja korzysta z ustawienia odpowiadającego językowi ustawionemu dla aplikacji.</string>
+    <string name="raised">Uruchomiono</string>
+    <string name="scheduled">Zaplanowano</string>
 </resources>
