--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -249,4 +249,6 @@
     <string name="alarm_ringtone">Toque do alarme</string>
     <string name="system_locale">Usar a configuração do sistema para o formato de data/hora</string>
     <string name="system_locale_summary">Quando desativado, o aplicativo usará a configuração correspondente ao idioma definido para o aplicativo.</string>
+    <string name="raised">Acionado</string>
+    <string name="scheduled">Agendado</string>
 </resources>
