--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -251,4 +251,6 @@
     <string name="alarm_ringtone">Мелодия будильника</string>
     <string name="system_locale">Используйте системные настройки для формата даты/времени</string>
     <string name="system_locale_summary">В выключенном состоянии приложение использует настройки, соответствующие языку, установленному для данного приложения.</string>
+    <string name="raised">Сработало</string>
+    <string name="scheduled">Запланировано</string>
 </resources>
