--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -244,4 +244,6 @@
     <string name="alarm_ringtone">Alarmsignal</string>
     <string name="system_locale">Använd systeminställning för datum-/tidsformat</string>
     <string name="system_locale_summary">Om avstängd använder appen den inställning som motsvarar det språk som har ställts in för appen.</string>
+    <string name="raised">Utlöst</string>
+    <string name="scheduled">Schemalagd</string>
 </resources>
