--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -244,4 +244,6 @@
     <string name="alarm_ringtone">Alarm zil sesi</string>
     <string name="system_locale">Tarih/saat biçimi için sistem ayarını kullan</string>
     <string name="system_locale_summary">Kapatıldığında, uygulama, uygulama için ayarlanan dille eşleşen ayarı kullanır.</string>
+    <string name="raised">Çaldı</string>
+    <string name="scheduled">Planlandı</string>
 </resources>
