--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -254,4 +254,6 @@
     <string name="alarm_ringtone">Мелодія будильника</string>
     <string name="system_locale">Використовуйте системні налаштування для формату дати/часу</string>
     <string name="system_locale_summary">У вимкненому стані програма використовує налаштування, що відповідають мові, встановленій для програми.</string>
+    <string name="raised">Спрацював</string>
+    <string name="scheduled">Заплановано</string>
 </resources>
