--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -239,4 +239,6 @@
     <string name="alarm_ringtone">闹钟铃声</string>
     <string name="system_locale">使用系统设置日期/时间格式</string>
     <string name="system_locale_summary">如果关闭，应用程序将使用与为应用程序设置的语言相匹配的设置。</string>
+    <string name="raised">已触发</string>
+    <string name="scheduled">已排定</string>
 </resources>
